--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
+    "expo-secure-store": "^12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -31,8 +32,10 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.13.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
+    "styled-components": "^6.0.7",
     "yup": "^1.2.0"
   },
   "devDependencies": {
