--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
+    "expo-localization": "^14.3.0",
     "expo-router": "2.0.0",
     "expo-secure-store": "^12.3.1",
     "expo-splash-screen": "~0.20.5",
@@ -28,6 +29,7 @@
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dynamic-import": "^1.1.5",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
