--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
+    "styled-components": "^6.0.8",
     "yup": "^1.2.0"
   },
   "devDependencies": {
