--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-localization": "^14.3.0",
     "expo-router": "2.0.0",
     "expo-secure-store": "^12.3.1",
+    "expo-speech": "~11.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
