--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/slider": "^4.4.3",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
@@ -34,6 +35,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-slider": "^0.11.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.8",
