--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.8",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
