--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-av": "^13.6.0",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-localization": "^14.3.0",
     "expo-router": "2.0.0",
@@ -32,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -39,8 +42,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.8",
-    "yup": "^1.2.0",
-    "expo-image-picker": "~14.3.2"
+    "yandex-speech": "^0.0.14",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
