--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.8",
     "expo-av": "^13.6.0",
+    "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
@@ -34,22 +36,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-slider": "^0.11.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
-    "styled-components": "^6.0.8",
     "yandex-speech": "^0.0.14",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
     "prettier": "^3.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
