--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/slider": "^4.4.3",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "expo": "~49.0.8",
-    "expo-av": "^13.6.0",
+    "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
@@ -35,7 +35,8 @@
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native-actionsheet": "^2.4.5",
     "prettier": "^3.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
