--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "dotenv": "^16.3.1",
     "expo": "~49.0.8",
     "expo-av": "~13.4.1",
-    "expo-camera": "^13.6.0",
+    "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-localization": "^14.3.0",
-    "expo-permissions": "^14.4.0",
+    "expo-permissions": "~14.2.1",
     "expo-router": "2.0.0",
     "expo-secure-store": "^12.3.1",
     "expo-speech": "~11.3.0",
